# car_simulator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: CI_Process.md  Car_Simulator_Dev_Notes.md  class_architecture.md  class_diagram.md  folder_structure.md
include/glad/: glad.h
src/: Loader.cpp  Loader.h  Window.cpp  Window.h  car.cpp  car.h  glad.c  main.cpp  main_car.cpp  opengl_learning.cpp
src/core/: Config.h
src/entities/: Entity.cpp  Entity.h
src/envs/: ParkingEnv.cpp  ParkingEnv.h  ParkingParams.h
src/renderers/: Renderer.cpp  Renderer.h
src/shaders/: CarShader.cpp  CarShader.h  ParkingShader.cpp  ParkingShader.h  RectShader.cpp  RectShader.h  ShaderProgram.cpp  ShaderProgram.h  carShader.frag  carShader.vert  parkingShader.frag  rectShader.frag  rectShader.vert
src/simulator/: Simulator.cpp  Simulator.h
src/utilities/: MathUtils.h  Randomizer.cpp  Randomizer.h
src/vehicledynamics/: BicycleModel.cpp  BicycleModel.h  VehicleTypes.h
tests/: test_parking_math.cpp
